Updated extraction and html template

--- a/localturk/extract.html
+++ b/localturk/extract.html
@@ -28,13 +28,13 @@
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <div class="container">
-    <h1>MIT MGH Data Extraction Platform</h1>
+    <h1>MIT Data Extraction Platform</h1>
     <div class="row">
         <div class="col-md-9" id="note">
         </div>
 
         <div class="col-md-3">
-            <b>Ejection Fraction:</b><br>
+            <b>Extracted Value (either numerical value or 0/1 for phrase presence):</b><br>
             <input type="text" name="line1" id="line1" placeholder="${guess}" />
         </div>
     </div>
